Fix card spacing on profile page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -164,7 +164,7 @@
   padding-top: 35px;
   margin: 10px auto;
   width: 50%;
-  height: 500px;
+  height: 400px;
   text-align: center;
 }
 
